# aulas-ia

./: .env.example  .gitignore  404.html  AGENTS.md  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml
aulas/aula-01-hello-agent/: README.md  index.html  main.py  pyproject.toml
aulas/aula-01-hello-agent/assets/: diagram.md
aulas/aula-02-prompt-engineering/: README.md  index.html  main.py  pyproject.toml
aulas/aula-02-prompt-engineering/assets/: diagram.md
aulas/aula-03-tool-calling/: README.md  index.html  main.py  pyproject.toml  tools.py
aulas/aula-03-tool-calling/assets/: diagram.md
aulas/aula-04-react-agent/: README.md  index.html  main.py  pyproject.toml
aulas/aula-04-react-agent/assets/: diagram.md
aulas/aula-04-react-agent/assets/diagram/: index.html
aulas/aula-05-memory/: README.md  index.html  main.py  pyproject.toml
aulas/aula-05-memory/assets/: diagram.md
aulas/aula-05-memory/assets/diagram/: index.html
aulas/aula-06-knowledge-rag/: README.md  index.html  main.py  pyproject.toml
aulas/aula-06-knowledge-rag/assets/: diagram.md
aulas/aula-06-knowledge-rag/docs/: agno-overview.md  python-guide.md
aulas/aula-07-planning/: README.md  index.html  main.py  pyproject.toml
aulas/aula-07-planning/assets/: diagram.md
aulas/aula-08-multi-agent-team/: README.md  index.html  main.py  pyproject.toml
aulas/aula-08-multi-agent-team/assets/: diagram.md
aulas/aula-08-multi-agent-team/assets/diagram/: index.html
aulas/aula-09-guardrails/: README.md  guardrails.py  index.html  main.py  pyproject.toml
aulas/aula-09-guardrails/assets/: diagram.md
aulas/aula-09-guardrails/assets/diagram/: index.html
aulas/aula-10-projeto-final/: README.md  index.html  main.py  pyproject.toml
aulas/aula-10-projeto-final/agents/: __init__.py  analyst.py  researcher.py  writer.py
aulas/aula-10-projeto-final/assets/: diagram.md
aulas/aula-10-projeto-final/assets/diagram/: index.html
docs/aulas/: aula-01-hello-agent  aula-02-prompt-engineering  aula-03-tool-calling  aula-04-react-agent  aula-05-memory  aula-06-knowledge-rag  aula-07-planning  aula-08-multi-agent-team  aula-09-guardrails  aula-10-projeto-final
search/: search_index.json
specs/001-ai-agents-course/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+9 files in other folders)
