[project]
name = "aula-04-react-agent"
version = "0.1.0"
description = "Aula 04: Agente ReAct — Raciocínio + Ação em loop"
requires-python = ">=3.11"
dependencies = [
    "agno",
    "google-genai",
    "python-dotenv",
    "duckduckgo-search",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.backends"
