[project]
name = "aula-05-memory"
version = "0.1.0"
description = "Aula 05: Memory — Agente com memória conversacional persistente"
requires-python = ">=3.11"
dependencies = [
    "agno",
    "google-genai",
    "python-dotenv",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.backends"
