[project]
name = "aula-08-multi-agent-team"
version = "0.1.0"
description = "Aula 08: Multi-Agent Team — Múltiplos agentes colaborando"
requires-python = ">=3.11"
dependencies = [
    "agno",
    "google-genai",
    "python-dotenv",
    "duckduckgo-search",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.backends"
